--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react": "^15.0.2",
+    "pouchdb": "^5.3.2",
+    "pouchdb-asyncstorage-down": "^1.1.9",
+    "react": "15.0.2",
     "react-native": "^0.26.2"
   }
 }
