--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "pouchdb": "^5.3.2",
-    "pouchdb-asyncstorage-down": "^1.1.9",
+    "events": "^1.1.0",
+    "lodash.find": "^4.4.0",
+    "pouchdb": "5.3.2",
     "react": "15.0.2",
-    "react-native": "^0.26.2"
-  },
-  "devDependencies": {
-    "lodash.find": "^4.4.0"
+    "react-native": "0.26.3"
   }
 }
