--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "dependencies": {
     "events": "^1.1.0",
     "lodash.find": "^4.4.0",
-    "pouchdb": "5.3.2",
-    "react": "15.0.2",
-    "react-native": "0.26.3"
+    "pouchdb": "^5.3.2",
+    "react": "^15.1.0",
+    "react-native": "^0.27.1"
   }
 }
