--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "events": "^1.1.0",
-    "lodash.find": "^4.4.0",
-    "pouchdb": "^5.3.2",
-    "react": "^15.1.0",
-    "react-native": "^0.27.1"
+    "events": "1.1.0",
+    "lodash.find": "4.4.0",
+    "pouchdb": "5.3.2",
+    "react": "15.1.0",
+    "react-native": "0.27.1"
   }
 }
